chore: update project description

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "pygrpc"
 version = "0.1.0"
-description = "Add your description here"
+description = "Pythonic interface for the gRPC protocol focusing primarily on the web"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
